--- a/Project.ipynb
+++ b/Project.ipynb
@@ -79,7 +79,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_graph(size, number_edge):\n",
+    "    A = np.zeros((size, size))\n",
+    "    zeros_index = [(i,j) for i in range(size)]\n",
+    "    for i in range(number_edge):\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
