--- a/Project.ipynb
+++ b/Project.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle"
+    "import pickle\n",
+    "import numpy.random as rd"
    ]
   },
   {
@@ -76,15 +77,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "a must be 1-dimensional",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/l0/5qk3mw253y945myr_1tfc8z00000gn/T/ipykernel_6548/2441475341.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional"
+     ]
+    }
+   ],
+   "source": [
+    "rd.choice([(1,2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_graph(size, number_edge):\n",
-    "    A = np.zeros((size, size))\n",
-    "    zeros_index = [(i,j) for i in range(size)]\n",
-    "    for i in range(number_edge):\n",
+    "    if number_edge == 0:\n",
+    "        graph = np.eye(size)\n",
+    "        return graph\n",
+    "    else: \n",
+    "        graph = create_graph(size, number_edge - 1)\n",
+    "        zeros_index = []\n",
+    "        for i in range(size):\n",
+    "            for j in range(i + 1, size):\n",
+    "                if graph[i,j] == 0:\n",
+    "                    zeros_index.append((i, j))\n",
+    "        ind = rd.randint(0, len(zeros_index) - 1)\n",
+    "        a,b = zeros_index[ind]\n",
+    "        graph[a,b] = 1\n",
+    "        graph[b,a] = 1\n",
+    "        return graph\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [1., 1., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_graph(5,2)"
    ]
   }
  ],
