advancement on DGD

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -16,19 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.kernel_ridge import KernelRidge"
+    "from sklearn.kernel_ridge import KernelRidge\n",
+    "import numpy.random as rd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,36 +105,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
+    "x=x[:n] #select n first points of dataset\n",
+    "y=y[:n]\n",
     "sel = [i for i in range(n)]\n",
     "ind = np.random.choice(sel, m, replace=False)\n",
-    "x_selected = np.array([x[i] for i in ind])\n",
-    "y_selected = np.array([y[i] for i in ind])"
+    "x_selected = np.array([x[i] for i in ind])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If all the data is available in one single location, we can solve for $\\alpha^*$\n",
+    "via the optimality conditions, and\n",
+    "$$[\\sigma^2K_{mm} + K_{nm}^\\top K_{nm} + \\nu I]\\alpha^* = K_{nm}^\\top y$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def euclidean_kernel(x, xi, k=1):\n",
-    "    return np.exp(-k * np.linalg.norm(x - xi)**2)\n",
+    "def euclidean_kernel(x, xi):\n",
+    "    return np.exp(np.linalg.norm(x - xi)**2)\n",
     "\n",
-    "def compute_kernel_matrix(X, Y, k):\n",
+    "def compute_kernel_matrix(X, Y):\n",
     "    n = X.shape[0]\n",
     "    m = Y.shape[0]\n",
     "    K = np.zeros((n, m))\n",
     "    for i in range(n):\n",
     "        for j in range(m):\n",
-    "            K[i, j] = euclidean_kernel(X[i], Y[j], k)\n",
+    "            K[i, j] = euclidean_kernel(X[i], Y[j])\n",
     "    return K\n",
     "\n",
     "def compute_alpha_star(Kmm, Knm, y, sigma_squared, nu):\n",
-    "    n = Knm.shape[0]\n",
     "    m = Kmm.shape[0]\n",
     "    A = sigma_squared * Kmm + np.dot(Knm.T, Knm) + nu * np.eye(m)\n",
     "    b = np.dot(Knm.T, y)\n",
@@ -143,33 +153,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameters\n",
+    "sigma_squared = 0.5  # Example value\n",
+    "nu = 1.0  # Regularization parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 7.28 TiB for an array with shape (1000000, 1000000) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Compute kernel matrices\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Kmm \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_kernel_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m Knm \u001b[38;5;241m=\u001b[39m compute_kernel_matrix(x, x, k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Stack the target vector\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[17], line 7\u001b[0m, in \u001b[0;36mcompute_kernel_matrix\u001b[1;34m(X, Y, k)\u001b[0m\n\u001b[0;32m      5\u001b[0m n \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      6\u001b[0m m \u001b[38;5;241m=\u001b[39m Y\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m K \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(m):\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 7.28 TiB for an array with shape (1000000, 1000000) and data type float64"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\n# Compute kernel matrices\\nKmm = compute_kernel_matrix(x, x, k=0.5)\\nKnm = compute_kernel_matrix(x, x, k=0.5)\\n\\n# Stack the target vector\\ny_stacked = y.reshape(-1, 1)\\n\\n# Compute optimal alpha vector\\nalpha_star = compute_alpha_star(Kmm, Knm, y_stacked, sigma_squared, nu)\\n\\n# Plot the result\\nx_pred = np.linspace(min(x), max(x), 1000).reshape(-1, 1)\\nK_pred = compute_kernel_matrix(x_pred, x, k=0.5)\\ny_pred = np.dot(K_pred, alpha_star)\\n\\nplt.figure(figsize=(8, 6))\\nplt.scatter(x, y, color='blue', label='Data Points')\\nplt.plot(x_pred, y_pred, color='red', label='Kernel Ridge Regression')\\nplt.xlabel('x')\\nplt.ylabel('y')\\nplt.title('Kernel Ridge Regression with Optimal Alpha')\\nplt.legend()\\nplt.grid(True)\\nplt.show()\""
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "# Compute kernel matrices\n",
     "Kmm = compute_kernel_matrix(x, x, k=0.5)\n",
     "Knm = compute_kernel_matrix(x, x, k=0.5)\n",
     "\n",
     "# Stack the target vector\n",
     "y_stacked = y.reshape(-1, 1)\n",
-    "\n",
-    "# Define parameters\n",
-    "sigma_squared = 0.5  # Example value\n",
-    "nu = 1.0  # Regularization parameter\n",
     "\n",
     "# Compute optimal alpha vector\n",
     "alpha_star = compute_alpha_star(Kmm, Knm, y_stacked, sigma_squared, nu)\n",
@@ -187,7 +203,7 @@
     "plt.title('Kernel Ridge Regression with Optimal Alpha')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()\"\"\"\n"
    ]
   },
   {
@@ -199,69 +215,157 @@
     "\\|y − K_{nm}\\alpha\\|_2^2 +\\frac{\\nu}{2}\\|\\alpha\\|_2^2,\n",
     "$$\n",
     "This corresponds the following distributed optimization problem:\n",
-    "$$\\alpha^* = \\argmin_{\\alpha \\in \\R^m} \\sum_{j=1}^a \\frac{\\sigma^2}{a}\\frac{1}{2}\\alpha^\\top K_{mm}\\alpha +\\frac{1}{2}\\sum_{i\\in A}\n",
-    "\\|y_i − K_{(i)m}\\alpha\\|_2^2 +\\frac{\\nu}{2a}\\|\\alpha\\|_2^2,\n",
+    "$$\\alpha^* = \\argmin_{\\alpha \\in \\R^m} \\sum_{j=1}^a\\left[ \\frac{\\sigma^2}{a}\\frac{1}{2}\\alpha^\\top K_{mm}\\alpha +\\frac{1}{2}\\sum_{i\\in A}\n",
+    "\\|y_i − K_{(i)m}\\alpha\\|_2^2 +\\frac{\\nu}{2a}\\|\\alpha\\|_2^2\\right]\n",
+    "=\\argmin_{\\alpha \\in \\R^m}\\sum_{j=1}^af_j(\\alpha),\n",
     "$$\n",
     "where we indicated with $i \\in A$ the data points that belong to agent A, and with $K_{(i)m} =\n",
-    "[k(x_i, x_j )]_{j\\in \\mathcal{M}}$."
+    "[k(x_i, x_j )]_{j\\in \\mathcal{M}}$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective_function(alpha, sigma_squared, K_mm, y, K_nm, nu):\n",
-    "    term1 = (sigma_squared / 2) * np.dot(np.dot(alpha.T, K_mm), alpha)\n",
-    "    term2 = (1 / 2) * np.linalg.norm(y - np.dot(K_nm, alpha))**2\n",
-    "    term3 = (nu / 2) * np.linalg.norm(alpha)**2\n",
-    "    return term1 + term2 + term3"
+    "def local_objective_function(alpha, sigma_squared, K_mm, y_local, K_im, nu, a):\n",
+    "    term1 = (sigma_squared / a) * (1 / 2) * np.dot(np.dot(alpha.T, K_mm), alpha)\n",
+    "    term2 = (1 / 2) * np.sum((y_local - np.dot(K_im, alpha))**2)\n",
+    "    term3 = (nu / (2 * a)) * np.linalg.norm(alpha)**2\n",
+    "    return term1 + term2 + term3\n",
+    "\n",
+    "def compute_gradient(alpha, sigma_squared, K_mm, y_local, K_im, nu, a):\n",
+    "    grad = sigma_squared * np.dot(K_mm, alpha) / a\n",
+    "    grad += np.dot(K_im.T, np.dot(K_im, alpha) - y_local)\n",
+    "    grad += (nu / a) * alpha\n",
+    "    return grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decentralized Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the pseudo-code for DGD:\n",
+    "- Start with $\\alpha^i_0 \\in \\R^n$ at each device $i$\n",
+    "- Iterate: ask every device: $\\alpha^i_{k+1} = \\sum_{j=1}^N w_{ij}\\alpha^j_k- s_k\\nabla f_i(\\alpha^i_k), \\forall i$\n",
+    "\n",
+    "Here $w_{ij} = 0$ if device i and j are not connected, the step size at iteration $k$ is $s_k$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_local_cost_gradient(alpha, K_mm, y_local, K_nm_local, nu, sigma_squared):\n",
-    "    grad = sigma_squared * np.dot(K_mm, alpha) - np.dot(K_nm_local.T, y_local) + nu * alpha\n",
-    "    return grad\n",
-    "\n",
-    "def decentralized_gradient_descent(X, y, a, K_mm, K_nm_list, sigma_squared, nu, max_iter=1000, learning_rate=0.01, tol=1e-4):\n",
-    "    n, m = K_mm.shape\n",
-    "    alpha = np.zeros((m, 1))  # Initialize alpha\n",
-    "\n",
-    "    # Divide the data points among agents\n",
-    "    data_per_agent = n // a\n",
-    "    agents_data_indices = [list(range(i * data_per_agent, (i + 1) * data_per_agent)) for i in range(a)]\n",
-    "\n",
-    "    # Run decentralized gradient descent\n",
-    "    for _ in range(max_iter):\n",
-    "        alpha_new = np.copy(alpha)\n",
-    "\n",
-    "        # Update alpha locally\n",
+    "def create_graph(size, number_edge):\n",
+    "    if number_edge == 0:\n",
+    "        graph = np.eye(size)\n",
+    "        return graph\n",
+    "    else: \n",
+    "        graph = create_graph(size, number_edge - 1)\n",
+    "        zeros_index = []\n",
+    "        for i in range(size):\n",
+    "            for j in range(i + 1, size):\n",
+    "                if graph[i,j] == 0:\n",
+    "                    zeros_index.append((i, j))\n",
+    "        ind = rd.randint(0, len(zeros_index) - 1)\n",
+    "        a,b = zeros_index[ind]\n",
+    "        graph[a,b] = 1\n",
+    "        graph[b,a] = 1\n",
+    "        return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decentralized_gradient_descent(X, y, sigma_squared, nu, m, a, num_iterations, step_size, alpha_star):\n",
+    "    n = X.shape[0]\n",
+    "    agents_data_indices = np.array_split(np.random.permutation(n), a)\n",
+    "    alpha = np.zeros((m, 1))  # Initialize local variables for each agent\n",
+    "    optimality_gap = []\n",
+    "    \n",
+    "    # Create communication graph (example: fully connected)\n",
+    "    communication_graph = np.ones((a, a)) - np.eye(a)\n",
+    "    \n",
+    "    for _ in range(num_iterations):\n",
     "        for agent_idx, data_indices in enumerate(agents_data_indices):\n",
-    "            K_nm_local = compute_kernel_matrix(X[data_indices], X, k)\n",
+    "            # Select data and compute local variables\n",
+    "            X_local = X[data_indices]\n",
     "            y_local = y[data_indices]\n",
-    "            local_grad = compute_local_cost_gradient(alpha, K_mm, y_local, K_nm_local, nu, sigma_squared)\n",
-    "            alpha_new -= learning_rate * (1 / a) * local_grad\n",
+    "            K_im = compute_kernel_matrix(X_local, X)\n",
+    "            \n",
+    "            # Compute gradient\n",
+    "            grad = compute_gradient(alpha, sigma_squared, K_mm, y_local, K_im, nu, a)\n",
+    "            \n",
+    "            # Update local variable\n",
+    "            alpha -= step_size * (grad - np.dot(communication_graph[agent_idx], alpha))\n",
+    "        \n",
+    "        # Compute optimality gap\n",
+    "        optimality_gap.append(np.linalg.norm(np.dot(K_mm, alpha) - np.dot(Knm, alpha_star)))\n",
+    "        \n",
+    "    return optimality_gap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (20,100) and (10,1) not aligned: 100 (dim 1) != 10 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[113], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m alpha_star \u001b[38;5;241m=\u001b[39m compute_alpha_star(K_mm, Knm, y, sigma_squared, nu)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Run decentralized gradient descent\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m optimality_gap \u001b[38;5;241m=\u001b[39m \u001b[43mdecentralized_gradient_descent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma_squared\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstep_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha_star\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[112], line 18\u001b[0m, in \u001b[0;36mdecentralized_gradient_descent\u001b[1;34m(X, y, sigma_squared, nu, m, a, num_iterations, step_size, alpha_star)\u001b[0m\n\u001b[0;32m     15\u001b[0m K_im \u001b[38;5;241m=\u001b[39m compute_kernel_matrix(X_local, X)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Compute gradient\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m grad \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_gradient\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpha\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma_squared\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK_mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_local\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK_im\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Update local variable\u001b[39;00m\n\u001b[0;32m     21\u001b[0m alpha \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m step_size \u001b[38;5;241m*\u001b[39m (grad \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(communication_graph[agent_idx], alpha))\n",
+      "Cell \u001b[1;32mIn[110], line 9\u001b[0m, in \u001b[0;36mcompute_gradient\u001b[1;34m(alpha, sigma_squared, K_mm, y_local, K_im, nu, a)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_gradient\u001b[39m(alpha, sigma_squared, K_mm, y_local, K_im, nu, a):\n\u001b[0;32m      8\u001b[0m     grad \u001b[38;5;241m=\u001b[39m sigma_squared \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(K_mm, alpha) \u001b[38;5;241m/\u001b[39m a\n\u001b[1;32m----> 9\u001b[0m     grad \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(K_im\u001b[38;5;241m.\u001b[39mT, \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mK_im\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m-\u001b[39m y_local)\n\u001b[0;32m     10\u001b[0m     grad \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (nu \u001b[38;5;241m/\u001b[39m a) \u001b[38;5;241m*\u001b[39m alpha\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m grad\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (20,100) and (10,1) not aligned: 100 (dim 1) != 10 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "num_iterations = 100\n",
+    "step_size = 0.01\n",
     "\n",
-    "        # Synchronize alpha among agents\n",
-    "        alpha = alpha_new\n",
-    "\n",
-    "        # Check for convergence\n",
-    "        if np.linalg.norm(alpha - alpha_new) < tol:\n",
-    "            break\n",
-    "\n",
-    "    return alpha\n",
-    "\n",
-    "# Example usage:\n",
-    "# Assuming you have X, y, a, K_mm, K_nm_list, sigma_squared, nu defined somewhere\n",
+    "# Compute alpha_star\n",
+    "K_mm = compute_kernel_matrix(x_selected, x_selected)\n",
+    "Knm = compute_kernel_matrix(x, x_selected)\n",
+    "alpha_star = compute_alpha_star(K_mm, Knm, y, sigma_squared, nu)\n",
     "\n",
     "# Run decentralized gradient descent\n",
-    "alpha_star = decentralized_gradient_descent(X, y, a, K_mm, K_nm_list, sigma_squared, nu)"
+    "optimality_gap = decentralized_gradient_descent(x, y, sigma_squared, nu, m, a, num_iterations, step_size, alpha_star)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting\n",
+    "plt.figure()\n",
+    "plt.plot(range(num_iterations), optimality_gap, marker='o')\n",
+    "plt.yscale('log')\n",
+    "plt.xscale('log')\n",
+    "plt.xlabel('Iterations')\n",
+    "plt.ylabel('Optimality Gap')\n",
+    "plt.title('Optimality Gap vs Iterations (log-log plot)')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   }
  ],
