--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +145,26 @@
     "x_selected = np.array([x[i] for i in ind])\n",
     "# x_selected =np.linspace(-1,1,m)\n",
     "#print(\"x_selected :\",x_selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_selected.shape"
    ]
   },
   {
@@ -1546,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,38 +1607,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def client_update(X_selected, E, al_0, Kmm, batch, y, nu, sigma_squared, step_size):\n",
+    "def client_update(E, al_0, Kmm, Kjm, y, nu, sigma_squared, step_size):\n",
     "    al = al_0\n",
-    "    for i in range(E):\n",
-    "        grad = (1/5)*np.dot(Kmm, al) + (nu/5)*al\n",
-    "        for j, dt in enumerate(batch):\n",
-    "            kjm = compute_kernel_matrix(dt,X_selected)\n",
-    "            grad += \n",
-    "        al -= step_size"
+    "    y = y.reshape(-1, 1)\n",
+    "    for _ in range(E):\n",
+    "        grad = (1/5)*np.dot(Kmm, al) + (nu/5)*al - (1/sigma_squared)*np.dot(Kjm.T, (y - np.dot(Kjm,al)))\n",
+    "        #print(al.shape, grad.shape, Kjm.shape, y.shape)\n",
+    "        al -= step_size*grad\n",
+    "    return al"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def FedAVg(B, C, E, X, X_selected, y, sigma_squared, nu, a, num_iterations, step_size, alpha_star, W):\n",
+    "def FedAVg(B, C, E, X_selected, X_, Y_, sigma_squared, nu, a, step_size, alpha_star):\n",
     "    m = X_selected.shape[0]\n",
-    "    n = X.shape[0]\n",
-    "    agents_data_indices = np.array_split(np.random.permutation(n), a)\n",
     "    # each agent should have n/a=100/5=20 points\n",
     "    alpha = [np.ones((m, 1)) for _ in range(a)]  \n",
-    "    all_optimality_gaps = [[] for _ in range(a)] \n",
-    "    all_alpha = [[] for _ in range(a)] \n",
+    "    #all_optimality_gaps = [[] for _ in range(a)] \n",
+    "    #all_alpha = [[] for _ in range(a)] \n",
     "    K_mm = compute_kernel_matrix(X_selected, X_selected)\n",
     "    for i in range(C):\n",
-    "        \n",
-    "    "
+    "        al_0 = alpha[i]\n",
+    "        K_jm = compute_kernel_matrix(X_[i], X_selected)\n",
+    "        y = Y_[i]\n",
+    "        al_E = client_update(E, al_0, K_mm, K_jm, y, nu, sigma_squared, step_size)\n",
+    "        alpha[i] = al_E\n",
+    "    res = (1/C)*np.sum(alpha, axis=0)\n",
+    "    ec = np.linalg.norm(res - alpha_star.reshape(-1, 1))\n",
+    "    return res, ec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.asarray(X)\n",
+    "Y = np.asarray(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6716132502971628\n",
+      "1.1479843793845546\n",
+      "0.8003150837415425\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    res, ec = FedAVg(B, C, E[i], x_selected, X, Y, sigma_squared, nu, a, step_size, alpha_star)\n",
+    "    print(ec)"
    ]
   },
   {
