--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -148,26 +148,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10,)"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_selected.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1389,6 +1369,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([20, 68, 42, 27, 85, 17, 31, 19, 74, 67, 98, 83, 77,  2, 33, 61, 79,\n",
+       "        15, 51, 25]),\n",
+       " array([70, 14, 13, 93, 76, 75, 90, 65, 24, 89, 88, 82, 62, 95,  4, 92, 45,\n",
+       "        63, 21, 50]),\n",
+       " array([30, 37, 97, 39, 81,  1, 84, 55, 72, 78, 57, 94,  6, 18, 32, 91, 73,\n",
+       "        10,  3, 52]),\n",
+       " array([26, 58, 80, 40, 12, 44, 53, 56,  5, 38,  9, 54, 43, 35, 22, 86, 23,\n",
+       "        29,  8, 96]),\n",
+       " array([87, 60, 46, 36, 99, 11, 66,  0, 64, 59, 71, 16, 34, 69,  7, 47, 48,\n",
+       "        28, 41, 49])]"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array_split(np.random.permutation(n), a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 197,
    "metadata": {},
    "outputs": [],
@@ -1566,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,47 +1616,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def client_update(E, al_0, Kmm, Kjm, y, nu, sigma_squared, step_size):\n",
+    "def client_update(X_selected, E, al_0, Kmm, batchs_x, batchs_y, nu, sigma_squared, step_size):\n",
     "    al = al_0\n",
-    "    y = y.reshape(-1, 1)\n",
-    "    for _ in range(E):\n",
-    "        grad = (1/5)*np.dot(Kmm, al) + (nu/5)*al - (1/sigma_squared)*np.dot(Kjm.T, (y - np.dot(Kjm,al)))\n",
-    "        #print(al.shape, grad.shape, Kjm.shape, y.shape)\n",
-    "        al -= step_size*grad\n",
+    "    for k in range(E):\n",
+    "        grad = (1/5)*np.dot(Kmm, al) + (nu/5)*al\n",
+    "        for j in range(len(batchs_x)):\n",
+    "            Kjm = compute_kernel_matrix(batchs_x[j], X_selected)\n",
+    "            y = batchs_y[j].reshape(-1,1)\n",
+    "            #print(al.shape, grad.shape, Kjm.shape, batchs_y[j].shape)\n",
+    "            grad -= (1/sigma_squared)*np.dot(Kjm.T, (y - np.dot(Kjm,al)))\n",
+    "        al -= step_size(k)*grad\n",
     "    return al"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def FedAVg(B, C, E, X_selected, X_, Y_, sigma_squared, nu, a, step_size, alpha_star):\n",
+    "def FedAVg(B, C, E, X_selected, X_, Y_, sigma_squared, nu, a, step_size, alpha_star, num_iterations):\n",
     "    m = X_selected.shape[0]\n",
     "    # each agent should have n/a=100/5=20 points\n",
     "    alpha = [np.ones((m, 1)) for _ in range(a)]  \n",
     "    #all_optimality_gaps = [[] for _ in range(a)] \n",
     "    #all_alpha = [[] for _ in range(a)] \n",
     "    K_mm = compute_kernel_matrix(X_selected, X_selected)\n",
-    "    for i in range(C):\n",
-    "        al_0 = alpha[i]\n",
-    "        K_jm = compute_kernel_matrix(X_[i], X_selected)\n",
-    "        y = Y_[i]\n",
-    "        al_E = client_update(E, al_0, K_mm, K_jm, y, nu, sigma_squared, step_size)\n",
-    "        alpha[i] = al_E\n",
-    "    res = (1/C)*np.sum(alpha, axis=0)\n",
+    "    for k in tqdm(range(num_iterations)):\n",
+    "        for i in range(C):\n",
+    "            al_0 = alpha[i]\n",
+    "            x = X_[i].reshape(-1,1)\n",
+    "            y = Y_[i].reshape(-1,1)\n",
+    "            number_of_point = len(x)\n",
+    "            #if B == number_of_point:\n",
+    "            #K_jm = compute_kernel_matrix(X_[i], X_selected)\n",
+    "            conc = np.concatenate([x, y], axis = 1)\n",
+    "            spl = np.array_split(conc, number_of_point//B)\n",
+    "            batchs_x = [spl[i][:,0] for i in range(len(spl))]\n",
+    "            batchs_y = [spl[i][:,1] for i in range(len(spl))]\n",
+    "            al_E = client_update(X_selected, E, al_0, K_mm, batchs_x, batchs_y, nu, sigma_squared, step_size)\n",
+    "            alpha[i] = al_E\n",
+    "        res = (1/C)*np.sum(alpha, axis=0)\n",
+    "        for i in range(a):\n",
+    "            alpha[i] = res\n",
     "    ec = np.linalg.norm(res - alpha_star.reshape(-1, 1))\n",
     "    return res, ec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,23 +1679,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_const(_, step_size=0.002):\n",
+    "    return step_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 218.07it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6716132502971628\n",
-      "1.1479843793845546\n",
-      "0.8003150837415425\n"
+      "0.2439071950760068\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:02<00:00, 44.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2460018785661087\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:21<00:00,  4.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1991519252670935\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "for i in range(3):\n",
-    "    res, ec = FedAVg(B, C, E[i], x_selected, X, Y, sigma_squared, nu, a, step_size, alpha_star)\n",
+    "    res, ec = FedAVg(B, C, E[i], x_selected, X, Y, sigma_squared, nu, a, step_const, alpha_star, 100)\n",
     "    print(ec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#different parameters\n",
+    "\n"
    ]
   },
   {
