--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -1635,6 +1635,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 1, 3, 0, 3])"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(range(a), C, replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 317,
    "metadata": {},
    "outputs": [],
@@ -1647,6 +1667,7 @@
     "    #all_alpha = [[] for _ in range(a)] \n",
     "    K_mm = compute_kernel_matrix(X_selected, X_selected)\n",
     "    for k in tqdm(range(num_iterations)):\n",
+    "        C_ = np.random.choices(range(a), C)\n",
     "        for i in range(C):\n",
     "            al_0 = alpha[i]\n",
     "            x = X_[i].reshape(-1,1)\n",
@@ -1755,7 +1776,9 @@
    "outputs": [],
    "source": [
     "#different parameters\n",
-    "\n"
+    "\n",
+    "B_ = [2, 5, 10, 20]\n",
+    "C_ = range(1,6)\n"
    ]
   },
   {
