ADMM corrected + plots

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
     "            sol = step2(b,c, K_mm, K_im, K_imy, nu, sigma_squared)\n",
     "            alpha[agent_idx] = sol\n",
     "        for i in range(a):\n",
-    "            for j in range(i):\n",
+    "            for j in range(a):\n",
     "                gam[i,j] = (1/2)*(alpha[i] + alpha[j])\n",
     "                lamb[i,j] += beta*(alpha[i] - gam[i,j])\n",
     "        for agent_idx in range(a):\n",
